change redirecting between pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="cards-container">
             <div class="card">
-                <h3>Trip to Paris</h3>
+                <h3><a href="card.html" style="text-decoration:none;color:orange;">Trip to Paris</a></h3>
                 <hr>
                 <p>Completed task</p>
                 <form>
