--- a/card.html
+++ b/card.html
@@ -12,7 +12,7 @@
     <div class="main-container">
         <hr>
         <h1>Trip to Paris</h1>
-        <a href="#" class="fa fa-arrow-circle-left"></a>
+        <a href="index.html" class="fa fa-arrow-circle-left"></a>
         <p>Back</p>
         <div class="card">
             <h3>Trip to Paris</h3>
